--- a/src/css/_mixin.scss
+++ b/src/css/_mixin.scss
@@ -1,6 +1,9 @@
 $maxWidth: 1920;
 $maxWidthContainer: 1320;
 
+$maxWidth: 1920;
+$maxWidthContainer: 1320;
+
 @mixin adaptive ($property, $startSize, $minSize, $type) {
   $addSize: $startSize - $minSize;
   @if $type==1 {
@@ -24,3 +27,18 @@ $maxWidthContainer: 1320;
 // Как использовать
 
 @include adaptive ("padding", 30, 10, 0); // Свойство, максимальное значение, значение которое станет в итоге, тип
+
+@mixin adaptiv-font($pcSize, $mobSize) {
+ $addSize: $pcSize - $mobSize;
+ $addMobSize: $addSize + $addSize * 0.7;
+ @media (max-width: 767px) {
+   font-size: calc(#{$mobSize + px} + #{$addMobSize} * ((100vw - 320px) / #{$maxWidth}));
+ }
+ @media (min-width: 767px) {
+  font-size: calc(#{$mobSize + px} + #{$addSize} * (100vw / #{$maxWidth}));
+}
+}
+// Как использовать
+
+@include adaptiv-font($pcSize, $mobSize); // 1 значение - шрифт на пк, 2 значение шрифт на мобильном разрешение. maxwidth разрешение макета
+
