--- a/src/css/overall/fonts.scss
+++ b/src/css/overall/fonts.scss
@@ -2,7 +2,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 100;
-  display: swap;
+  font-display: swap;
   src: local('Roboto-thin'),
        url("../fonts/Roboto-thin.woff2") format("woff2"),
        url("../fonts/Roboto-thin.woff") format("woff");
@@ -12,7 +12,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 200;
-  display: swap;
+  font-display: swap;
   src: local('Roboto-ExtraLight'),
        url("../fonts/Roboto-ExtraLight.woff2") format("woff2"),
        url("../fonts/Roboto-ExtraLight.woff") format("woff");
@@ -22,7 +22,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
-  display: swap;
+  font-display: swap;
   src: local('Roboto-light'),
        url("../fonts/Roboto-light.woff2") format("woff2"),
        url("../fonts/Roboto-light.woff") format("woff");
@@ -32,7 +32,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  display: swap;
+  font-display: swap;
   src: local('Roboto-regular'),
        url("../fonts/Roboto-regular.woff2") format("woff2"),
        url("../fonts/Roboto-regular.woff") format("woff");
@@ -42,7 +42,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
-  display: swap;
+  font-display: swap;
   src: local('Roboto-medium'),
        url("../fonts/Roboto-medium.woff2") format("woff2"),
        url("../fonts/Roboto-medium.woff") format("woff");
@@ -52,7 +52,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 600;
-  display: swap;
+  font-display: swap;
   src: local('Roboto-SemiBold'),
        url("../fonts/Roboto-SemiBold.woff2") format("woff2"),
        url("../fonts/Roboto-SemiBold.woff") format("woff");
@@ -63,7 +63,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
-  display: swap;
+  font-display: swap;
   src: local('Roboto-Bold'),
        url("../fonts/Roboto-Bold.woff2") format("woff2"),
        url("../fonts/Roboto-Bold.woff") format("woff");
@@ -74,7 +74,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 800;
-  display: swap;
+  font-display: swap;
   src: local('Roboto-ExtraBold'),
        url("../fonts/Roboto-ExtraBold.woff2") format("woff2"),
        url("../fonts/Roboto-ExtraBold.woff") format("woff");
@@ -84,7 +84,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 900;
-  display: swap;
+  font-display: swap;
   src: local('Roboto-Black'),
        url("../fonts/Roboto-Black.woff2") format("woff2"),
        url("../fonts/Roboto-Black.woff") format("woff");
