--- a/src/css/overall/fonts.scss
+++ b/src/css/overall/fonts.scss
@@ -4,8 +4,8 @@
   font-weight: 100;
   font-display: swap;
   src: local('Roboto-thin'),
-       url("../fonts/Roboto-thin.woff2") format("woff2"),
-       url("../fonts/Roboto-thin.woff") format("woff");
+       url("../../fonts/Roboto-thin.woff2") format("woff2"),
+       url("../../fonts/Roboto-thin.woff") format("woff");
 }
 
 @font-face {
@@ -14,8 +14,8 @@
   font-weight: 200;
   font-display: swap;
   src: local('Roboto-ExtraLight'),
-       url("../fonts/Roboto-ExtraLight.woff2") format("woff2"),
-       url("../fonts/Roboto-ExtraLight.woff") format("woff");
+       url("../../fonts/Roboto-ExtraLight.woff2") format("woff2"),
+       url("../../fonts/Roboto-ExtraLight.woff") format("woff");
 }
 
 @font-face {
@@ -24,8 +24,8 @@
   font-weight: 300;
   font-display: swap;
   src: local('Roboto-light'),
-       url("../fonts/Roboto-light.woff2") format("woff2"),
-       url("../fonts/Roboto-light.woff") format("woff");
+       url("../../fonts/Roboto-light.woff2") format("woff2"),
+       url("../../fonts/Roboto-light.woff") format("woff");
 }
 
 @font-face {
@@ -34,8 +34,8 @@
   font-weight: 400;
   font-display: swap;
   src: local('Roboto-regular'),
-       url("../fonts/Roboto-regular.woff2") format("woff2"),
-       url("../fonts/Roboto-regular.woff") format("woff");
+       url("../../fonts/Roboto-regular.woff2") format("woff2"),
+       url("../../fonts/Roboto-regular.woff") format("woff");
 }
 
 @font-face {
@@ -44,8 +44,8 @@
   font-weight: 500;
   font-display: swap;
   src: local('Roboto-medium'),
-       url("../fonts/Roboto-medium.woff2") format("woff2"),
-       url("../fonts/Roboto-medium.woff") format("woff");
+       url("../../fonts/Roboto-medium.woff2") format("woff2"),
+       url("../../fonts/Roboto-medium.woff") format("woff");
 }
 
 @font-face {
@@ -54,8 +54,8 @@
   font-weight: 600;
   font-display: swap;
   src: local('Roboto-SemiBold'),
-       url("../fonts/Roboto-SemiBold.woff2") format("woff2"),
-       url("../fonts/Roboto-SemiBold.woff") format("woff");
+       url("../../fonts/Roboto-SemiBold.woff2") format("woff2"),
+       url("../../fonts/Roboto-SemiBold.woff") format("woff");
 }
 
 
@@ -65,8 +65,8 @@
   font-weight: 700;
   font-display: swap;
   src: local('Roboto-Bold'),
-       url("../fonts/Roboto-Bold.woff2") format("woff2"),
-       url("../fonts/Roboto-Bold.woff") format("woff");
+       url("../../fonts/Roboto-Bold.woff2") format("woff2"),
+       url("../../fonts/Roboto-Bold.woff") format("woff");
 }
 
 
@@ -76,8 +76,8 @@
   font-weight: 800;
   font-display: swap;
   src: local('Roboto-ExtraBold'),
-       url("../fonts/Roboto-ExtraBold.woff2") format("woff2"),
-       url("../fonts/Roboto-ExtraBold.woff") format("woff");
+       url("../../fonts/Roboto-ExtraBold.woff2") format("woff2"),
+       url("../../fonts/Roboto-ExtraBold.woff") format("woff");
 }
 
 @font-face {
@@ -86,8 +86,8 @@
   font-weight: 900;
   font-display: swap;
   src: local('Roboto-Black'),
-       url("../fonts/Roboto-Black.woff2") format("woff2"),
-       url("../fonts/Roboto-Black.woff") format("woff");
+       url("../../fonts/Roboto-Black.woff2") format("woff2"),
+       url("../../fonts/Roboto-Black.woff") format("woff");
 }
 
 
