--- a/src/css/overall/fonts.scss
+++ b/src/css/overall/fonts.scss
@@ -1,98 +1,92 @@
 @font-face {
-  font-family: 'Roboto';
+  font-family: '';
   font-style: normal;
   font-weight: 100;
   font-display: swap;
-  src: local('Roboto-thin'),
-       url("../../fonts/Roboto-thin.woff2") format("woff2"),
-       url("../../fonts/Roboto-thin.woff") format("woff");
+  src: local(''),
+       url("../../fonts/ .woff2") format("woff2"),
+       url("../../fonts/ .woff") format("woff");
 }
 
 @font-face {
-  font-family: 'Roboto';
+  font-family: '';
   font-style: normal;
   font-weight: 200;
   font-display: swap;
-  src: local('Roboto-ExtraLight'),
-       url("../../fonts/Roboto-ExtraLight.woff2") format("woff2"),
-       url("../../fonts/Roboto-ExtraLight.woff") format("woff");
+  src: local(''),
+       url("../../fonts/ .woff2") format("woff2"),
+       url("../../fonts/ .woff") format("woff");
 }
 
 @font-face {
-  font-family: 'Roboto';
+  font-family: '';
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: local('Roboto-light'),
-       url("../../fonts/Roboto-light.woff2") format("woff2"),
-       url("../../fonts/Roboto-light.woff") format("woff");
+  src: local(''),
+       url("../../fonts/ .woff2") format("woff2"),
+       url("../../fonts/ .woff") format("woff");
 }
 
 @font-face {
-  font-family: 'Roboto';
+  font-family: '';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: local('Roboto-regular'),
-       url("../../fonts/Roboto-regular.woff2") format("woff2"),
-       url("../../fonts/Roboto-regular.woff") format("woff");
+  src: local(''),
+       url("../../fonts/ .woff2") format("woff2"),
+       url("../../fonts/ .woff") format("woff");
 }
 
 @font-face {
-  font-family: 'Roboto';
+  font-family: '';
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: local('Roboto-medium'),
-       url("../../fonts/Roboto-medium.woff2") format("woff2"),
-       url("../../fonts/Roboto-medium.woff") format("woff");
+  src: local(''),
+       url("../../fonts/ .woff2") format("woff2"),
+       url("../../fonts/ .woff") format("woff");
 }
 
 @font-face {
-  font-family: 'Roboto';
+  font-family: '';
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: local('Roboto-SemiBold'),
-       url("../../fonts/Roboto-SemiBold.woff2") format("woff2"),
-       url("../../fonts/Roboto-SemiBold.woff") format("woff");
+  src: local(''),
+       url("../../fonts/ .woff2") format("woff2"),
+       url("../../fonts/ .woff") format("woff");
 }
 
-
 @font-face {
-  font-family: 'Roboto';
+  font-family: '';
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: local('Roboto-Bold'),
-       url("../../fonts/Roboto-Bold.woff2") format("woff2"),
-       url("../../fonts/Roboto-Bold.woff") format("woff");
+  src: local(''),
+       url("../../fonts/ .woff2") format("woff2"),
+       url("../../fonts/ .woff") format("woff");
 }
 
-
 @font-face {
-  font-family: 'Roboto';
+  font-family: '';
   font-style: normal;
   font-weight: 800;
   font-display: swap;
-  src: local('Roboto-ExtraBold'),
-       url("../../fonts/Roboto-ExtraBold.woff2") format("woff2"),
-       url("../../fonts/Roboto-ExtraBold.woff") format("woff");
+  src: local(''),
+       url("../../fonts/ .woff2") format("woff2"),
+       url("../../fonts/ .woff") format("woff");
 }
 
 @font-face {
-  font-family: 'Roboto';
+  font-family: '';
   font-style: normal;
   font-weight: 900;
   font-display: swap;
-  src: local('Roboto-Black'),
-       url("../../fonts/Roboto-Black.woff2") format("woff2"),
-       url("../../fonts/Roboto-Black.woff") format("woff");
+  src: local(''),
+       url("../../fonts/ .woff2") format("woff2"),
+       url("../../fonts/ .woff") format("woff");
 }
-
-
-
-
 
 /* Начертания
 
