--- a/src/css/overall/overall.scss
+++ b/src/css/overall/overall.scss
@@ -1,3 +1,44 @@
+$maxWidth: 1920;
+$maxWidthContainer: 1360;
+
+@mixin adaptive ($property, $startSize, $minSize, $type) {
+  $addSize: $startSize - $minSize;
+  @if $type==1 {
+    // Только если меньше контейнера
+    #{$property}: $startSize + px;
+    @media (max-width: #{$maxWidthContainer + px}) {
+      #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidthContainer - 320}));
+    }
+  } @else if $type==2 {
+    // Только если больше контейнера 
+    #{$property}: $startSize + px;
+    @media (min-width: #{$maxWidthContainer + px}) {
+      #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
+    }
+  } @else {
+    // Всегда
+    #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
+  }
+}
+
+@mixin adaptiv-font($pcSize, $mobSize) {
+  $addSize: $pcSize - $mobSize;
+  $addMobSize: $addSize + $addSize * 0.7;
+  @media (max-width: 767px) {
+    font-size: calc(#{$mobSize + px} + #{$addMobSize} * ((100vw - 320px) / #{$maxWidth}));
+  }
+  @media (min-width: 767px) {
+    font-size: calc(#{$mobSize + px} + #{$addSize} * (100vw / #{$maxWidth}));
+  }
+}
+
+:root {
+  --black: #000000;
+  --white: #ffffff;
+  --hover: #7B68EE;
+  --active: #4169E1;
+}
+
 .container {
   max-width: 1320px;
   padding: 0 15px;
@@ -14,29 +55,38 @@ main {
   flex: 1 1 auto;
 }
 
-.text {
-  font-family: "Roboto400";
-  font-size: 16px;
-  line-height: 22px;
-  color: #202020;;
-}
-
 .title {
-  font-family: "TTFirsNeue400";
-  font-size: 24px;
-  line-height: 22px;
-  color: #202020;
+  @include adaptiv-font(38, 28);
+  @include adaptive ("line-height", 48, 38, 0);
+  font-weight: 700;
+  color: var(--black);
+  text-transform: uppercase;
+  text-align: center;
 }
 
-.btn {
-  font-family: "Roboto700";
-  font-size: 16px;
-  line-height: 19px;
-  color: #FFFFFF;
-  background-color: #FF6E30;
-  padding: 15px 21px;
-  border: 2px solid transparent;
-  transition: all .2s ease-in-out;
-  display: inline-block;
+.subtitle {
+  @include adaptiv-font(32, 24);
+  @include adaptive ("line-height", 42, 34, 0);
+  font-weight: 700;
+  color: var(--black);
+  text-transform: uppercase;
+  text-align: center;
 }
 
+.text {
+  @include adaptiv-font(20, 16);
+  @include adaptive ("line-height", 30, 26, 0);
+  font-weight: 400;
+  color: var(--black);
+  text-align: center;
+}
+
+.link {
+  @include adaptiv-font(20, 16);
+  @include adaptive ("line-height", 30, 26, 0);
+  font-weight: 400;
+  color: var(--black);
+}
+.body-block {
+  overflow: hidden;
+}
