--- a/src/css/_mixin.scss
+++ b/src/css/_mixin.scss
@@ -1,5 +1,7 @@
-$maxWidth: 1920;
-$maxWidthContainer: 1320;
+$maxWidth: 1920; // обязательно для адаптивного шрифта и адаптивного свойства
+$maxWidthContainer: 1320; // обязательно для адаптивного шрифта и адаптивного свойства
+
+// Адаптивное свойство
 
 @mixin adaptive ($property, $startSize, $minSize, $type) {
   $addSize: $startSize - $minSize;
@@ -25,6 +27,10 @@ $maxWidthContainer: 1320;
 
 @include adaptive ("padding", 30, 10, 0); // Свойство, максимальное значение, значение которое станет в итоге, тип
 
+// ===================================================================================================================================================
+
+// Адаптивный шрифт
+
 @mixin adaptiv-font($pcSize, $mobSize) {
  $addSize: $pcSize - $mobSize;
  $addMobSize: $addSize + $addSize * 0.7;
@@ -38,3 +44,60 @@ $maxWidthContainer: 1320;
 // Как использовать
 
 @include adaptiv-font($pcSize, $mobSize); // 1 значение - шрифт на пк, 2 значение шрифт на мобильном разрешение. maxwidth разрешение макета
+
+// ===================================================================================================================================================
+
+// Кастомный скролл
+
+/* полоса прокрутки (скроллбар) */
+::-webkit-scrollbar {
+  width: 24px; /* ширина для вертикального скролла */
+  height: 8px; /* высота для горизонтального скролла */
+  background-color: #143861;
+}
+
+/* ползунок скроллбара */
+::-webkit-scrollbar-thumb {
+  background-color: #843465;
+  border-radius: 9em;
+  box-shadow: inset 1px 1px 10px #f3faf7;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #253861;
+}
+
+/* Стрелки */
+
+::-webkit-scrollbar-button:vertical:start:decrement {
+  background: linear-gradient(120deg, #02141a 40%, rgba(0, 0, 0, 0) 41%),
+      linear-gradient(240deg, #02141a 40%, rgba(0, 0, 0, 0) 41%),
+      linear-gradient(0deg, #02141a 30%, rgba(0, 0, 0, 0) 31%);
+  background-color: #f6f8f4;
+}
+
+::-webkit-scrollbar-button:vertical:end:increment {
+  background:
+      linear-gradient(300deg, #02141a 40%, rgba(0, 0, 0, 0) 41%),
+      linear-gradient(60deg, #02141a 40%, rgba(0, 0, 0, 0) 41%),
+      linear-gradient(180deg, #02141a 30%, rgba(0, 0, 0, 0) 31%);
+  background-color: #f6f8f4;
+}
+
+::-webkit-scrollbar-button:horizontal:start:decrement {
+  background:
+      linear-gradient(30deg, #02141a 40%, rgba(0, 0, 0, 0) 41%),
+      linear-gradient(150deg, #02141a 40%, rgba(0, 0, 0, 0) 41%),
+      linear-gradient(270deg, #02141a 30%, rgba(0, 0, 0, 0) 31%);
+  background-color: #f6f8f4;
+}
+
+::-webkit-scrollbar-button:horizontal:end:increment {
+  background:
+      linear-gradient(210deg, #02141a 40%, rgba(0, 0, 0, 0) 41%),
+      linear-gradient(330deg, #02141a 40%, rgba(0, 0, 0, 0) 41%),
+      linear-gradient(90deg, #02141a 30%, rgba(0, 0, 0, 0) 31%);
+  background-color: #f6f8f4;
+}
+
+// ===================================================================================================================================================
