--- a/src/css/main-min.scss
+++ b/src/css/main-min.scss
@@ -2,4 +2,4 @@
 @import url(./overall/fonts.css);
 @import url(./overall/overall.css);
 
-@import url(./components/header.css);
+@import url(./components/style.css);
