--- a/src/css/_mixin.scss
+++ b/src/css/_mixin.scss
@@ -160,3 +160,414 @@ input[type="submit"] {
 }
 
 // ===================================================================================================================================================
+
+// Таймер с свг
+
+.hero .hero-button-next .timer { // hero-button-next класс кнопки у слайдера
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  width: 125%;
+  height: 125%;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.hero .timer-active .timer {
+  stroke-dasharray: 1000;
+  transform: translateX(0);
+  opacity: 1;
+  visibility: visible;
+  animation-name: pag;
+  animation-timing-function: linear;
+  animation-duration: 160s;
+}
+
+.hero .timer-disabled .timer { // если при автоплее у слайдера слайдов не остается но таймер перестает работать
+  animation-name: none;
+}
+
+.hero .timer-disabled .timer circle { // если при автоплее у слайдера слайдов не остается но таймер перестает работать
+  stroke: transparent;
+}
+
+.timer-active .timer circle {
+  stroke: var(--white);
+}
+
+@-webkit-keyframes pag {
+  from {
+    stroke-dashoffset: 1000;
+  }
+
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes pag {
+  0% {
+    stroke-dashoffset: 1000;
+  }
+
+  100% {
+    stroke-dashoffset: 0;
+  }
+}
+
+// <svg class="timer" width="24" height="24" viewBox="0 0 24 24"> // таймер
+//   <circle cx="4" cy="12" r="10" transform="rotate(-90 8 8)"
+//    stroke-width="1px" stroke="#ff862f" fill="transparent"></circle>
+// </svg>
+
+// Если нужно сделать чтобы у слайдера был таймер на кнопке то делаем так
+
+// on: {
+//   slideNextTransitionStart() {
+//     const timer = `<svg class="timer" width="24" height="24" viewBox="0 0 24 24">
+//     <circle cx="4" cy="12" r="10" transform="rotate(-90 8 8)"
+//     stroke-width="1px" stroke="#ff862f" fill="transparent"></circle>
+//     </svg>`;
+//     if (document.querySelector(".timer")) {
+//       document.querySelector(".timer").remove()
+//     }
+//     document.querySelector(".timer-active").insertAdjacentHTML("beforeend", timer)
+
+//     const swiperSlideActive = document.querySelector(".hero-swiper__slide.swiper-slide-active");
+//     if (!swiperSlideActive.nextElementSibling) {
+//       document.querySelector(".hero-button-next").classList.add("timer-disabled")
+//     }
+//   },
+//   slidePrevTransitionStart() {
+//     const timer = `<svg class="timer" width="24" height="24" viewBox="0 0 24 24">
+//     <circle cx="4" cy="12" r="10" transform="rotate(-90 8 8)"
+//     stroke-width="1px" stroke="#ff862f" fill="transparent"></circle>
+//     </svg>`;
+//     if (document.querySelector(".timer")) {
+//       document.querySelector(".timer").remove()
+//     }
+//     document.querySelector(".timer-active").insertAdjacentHTML("beforeend", timer)
+//     const swiperSlideActive = document.querySelector(".hero-swiper__slide.swiper-slide-active");
+//     if (swiperSlideActive.nextElementSibling) {
+//       document.querySelector(".hero-button-next").classList.remove("timer-disabled")
+//     }
+//   },
+//   afterInit() {
+//     const timer = `<svg class="timer" width="24" height="24" viewBox="0 0 24 24">
+//     <circle cx="4" cy="12" r="10" transform="rotate(-90 8 8)"
+//     stroke-width="1px" stroke="#ff862f" fill="transparent"></circle>
+//     </svg>`
+//     document.querySelector(".timer-active").insertAdjacentHTML("beforeend", timer)
+//   },
+// }
+// ===================================================================================================================================================
+// Таймер цсс
+
+// <div class="timer">
+// <div class="timer__line"></div>
+
+// <div class="timer__body">  <!-- Для счетчика -->
+
+// </div>
+// </div>
+
+.timer {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-color: red;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    z-index: 3;
+    background-color: orangered;
+    animation-name: line-mask-left;
+    animation-duration: 10s;
+    animation-timing-function: steps(1, end);
+    animation-fill-mode: forwards;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50%;
+    height: 100%;
+    z-index: 3;
+    background-color: blue;
+    animation-name: line-mask-right;
+    animation-duration: 10s;
+    animation-timing-function: steps(1, end);
+    animation-fill-mode: forwards;
+  }
+
+  &__line {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    // background-color: orange;
+    animation-name: animation-line;
+    animation-duration: 10s;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+    z-index: 2;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 50%;
+      height: 100%;
+      background-color: blue;
+    }
+  }
+
+  // Счетчик
+  &__body {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    text-align: center;
+    background-color: #fff;
+    overflow: hidden;
+    position: relative;
+    z-index: 4;
+  }
+
+  &__counter {
+    animation-name: counter;
+    animation-timing-function: steps(9, end);
+    animation-duration: 10s;
+    animation-fill-mode: forwards;
+
+    & span {
+      font-size: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100px;
+    }
+  }
+
+  // Счетчик
+}
+
+// Счетчик
+@keyframes counter {
+  0% {}
+
+  100% {
+    transform: translate(0, -900px);
+  }
+}
+
+// Счетчик
+
+// Сам круг
+@keyframes animation-line {
+  0% {}
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+// Сам круг
+// Левая часть маски
+@keyframes line-mask-left {
+  0% {
+    visibility: visible;
+  }
+
+  50% {
+    visibility: hidden;
+  }
+
+  100% {
+    visibility: hidden;
+  }
+}
+
+// Левая часть маски
+// Правая часть маски
+@keyframes line-mask-right {
+  0% {
+    visibility: hidden;
+  }
+
+  50% {
+    visibility: visible;
+  }
+
+  100% {
+    visibility: visible;
+  }
+}
+
+// Правая часть маски
+
+// ===================================================================================================================================================
+
+// Рипл, при нажатии появляется элемент и увеличивается, прикольно выглядит
+
+// <button data-ripple class="btn" type="button"> // дата атрибут инициирует
+// Btn
+// </button>
+
+.btn {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  font-size: 20px;
+  line-height: 1;
+  font-weight: 400;
+  color: #fff;
+  width: 160px;
+  height: 50px;
+  overflow: hidden;
+  letter-spacing: 1px;
+  background-color: rgb(143, 10, 10);
+  transition: background-color .2s ease-in-out;
+  @media (any-hover: hover) {
+  &:hover {
+    background-color: rgb(206, 27, 27);
+  }
+  }
+  &:active {
+  
+   transition-duration: .1s;
+  }
+}
+.ripple {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  border-radius: 50%;
+  background-color: rgba(255,255,255,.6);
+  border: 1px solid #fff;
+  animation-name: ripple-circle;
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out;
+}
+
+@keyframes ripple-circle {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(20);
+    opacity: 0;
+  }
+}
+
+// document.addEventListener("click", function (e) {
+//   const targetItem = e.target;
+//   if (targetItem.closest("[data-ripple]")) {
+
+//     const button = targetItem.closest("[data-ripple]");
+//     const ripple = document.createElement("span");
+//     const diametr = Math.max(button.clientWidth, button.clientHeight);
+//     const radius = diametr / 2;
+
+//     ripple.style.width = ripple.style.height = `${diametr}px`;
+//     ripple.style.left = `${e.pageX - (button.getBoundingClientRect().left + scrollX) - radius}px`;
+//     ripple.style.top = `${e.pageY - (button.getBoundingClientRect().top + scrollY) - radius}px`;
+//     ripple.classList.add("ripple");
+
+//     button.appendChild(ripple);
+
+//     const timeOut = getAnimationDuration(ripple);
+
+//     setTimeout(() => {
+//       ripple ? ripple.remove() : null;
+//     }, timeOut);
+
+//     function getAnimationDuration() {
+//       const aDuration = window.getComputedStyle(ripple).animationDuration;
+//       return aDuration.includes("ms") ? aDuration.replace("ms", "") : aDuration.replace("s", "") * 1000;
+//     }
+//   }
+// })
+
+// ===================================================================================================================================================
+
+// Блик эффект
+
+// .flare-button:after {
+//   content: "";
+//   display: block;
+//   width: 20px;
+//   height: 200px;
+//   margin-left: 50px;
+//   background: #fff;
+//   background: -webkit-gradient(
+//     linear,
+//     left top,
+//     left bottom,
+//     from(rgba(255, 255, 255, 0.7)),
+//     color-stop(50%, white),
+//     to(rgba(255, 255, 255, 0.7))
+//   );
+//   background: linear-gradient(
+//     to bottom,
+//     rgba(255, 255, 255, 0.7) 0%,
+//     white 50%,
+//     rgba(255, 255, 255, 0.7) 100%
+//   );
+//   left: -40px;
+//   top: -100px;
+//   z-index: 1;
+//   -webkit-transform: rotate(45deg);
+//   transform: rotate(45deg);
+//   position: absolute;
+//   -webkit-animation: movingFlare 3s ease-in-out 0.05s infinite;
+//   animation: movingFlare 3s ease-in-out 0.05s infinite;
+// }
+
+// @-webkit-keyframes movingFlare {
+//   0% {
+//     left: -30px;
+//     margin-left: 0px;
+//   }
+//   30% {
+//     left: 110%;
+//     margin-left: 80px;
+//   }
+//   100% {
+//     left: 110%;
+//     margin-left: 80px;
+//   }
+// }
+
+// @keyframes movingFlare {
+//   0% {
+//     left: -30px;
+//     margin-left: 0px;
+//   }
+//   30% {
+//     left: 110%;
+//     margin-left: 80px;
+//   }
+//   100% {
+//     left: 110%;
+//     margin-left: 80px;
+//   }
+// }
+
+// ===================================================================================================================================================
