--- a/src/css/overall/normalize.scss
+++ b/src/css/overall/normalize.scss
@@ -6,6 +6,7 @@ nav,footer,header,aside{display: block;}
 html,body{height:100%;width:100%;font-size:100%;line-height:1;font-size:14px;-ms-text-size-adjust:100%;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%;}
 input,button,textarea{font-family:inherit;}
 input::-ms-clear{display: none;}
+textarea,input {-webkit-appearance: none; border-radius: 0;}
 button{cursor: pointer;background-color: transparent;}
 button::-moz-focus-inner {padding:0;border:0;}
 a{display: inline-block;}
