--- a/src/css/overall/normalize.scss
+++ b/src/css/overall/normalize.scss
@@ -3,10 +3,10 @@
 :focus,:active{outline: none;}
 a:focus,a:active{outline: none;}
 nav,footer,header,aside{display: block;}
-html,body{height:100%;width:100%;font-size:100%;line-height:1;font-size:14px;-ms-text-size-adjust:100%;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%;}
+html,body{height:100%;width:100%;font-size:100%;line-height:1;font-size:14px;-ms-text-size-adjust:100%;-moz-text-size-adjust:100%;-webkit-text-size-adjust:100%; scroll-behavior: smooth;}
 input,button,textarea{font-family:inherit;}
 input::-ms-clear{display: none;}
-textarea,input {-webkit-appearance: none; border-radius: 0;}
+textarea,input {appearance: none;-webkit-appearance: none; border-radius: 0;}
 button{cursor: pointer;background-color: transparent;}
 button::-moz-focus-inner {padding:0;border:0;}
 a{display: inline-block;}
