--- a/src/css/_mixin.scss
+++ b/src/css/_mixin.scss
@@ -623,3 +623,60 @@ input[type="submit"] {
   
 // ===================================================================================================================================================
 
+// Рейтинг на цсс
+
+.rating {
+  position: relative;
+  display: flex;
+  flex-direction: row-reverse;
+  padding: 30px 40px;
+  border: 2px solid #000;
+  width: fit-content;
+  gap: 5px;
+}
+
+.rating__input {
+  position: relative;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.rating__input::before {
+  content: "\f005";
+  font-family: fontAwesome;
+  font-size: 34px;
+  position: absolute;
+  color: #000;
+  transition-timing-function: linear;
+  transition: .3s;
+}
+
+.rating__input:hover ~ input::before,
+.rating__input:hover::before,
+.rating__input:checked ~ input::before,
+.rating__input:checked::before {
+  color: red;
+}
+
+// Не забыть подключить
+
+// <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+// <div class="rating">
+// <input class="rating__input" type="radio" name="el1">
+// <input class="rating__input" type="radio" name="el1">
+// <input class="rating__input" type="radio" name="el1">
+// <input class="rating__input" type="radio" name="el1">
+// <input class="rating__input" type="radio" name="el1">
+// <input class="rating__input" type="radio" name="el1">
+// <input class="rating__input" type="radio" name="el1">
+// <input class="rating__input" type="radio" name="el1">
+// <input class="rating__input" type="radio" name="el1">
+// <input class="rating__input" type="radio" name="el1">
+// </div>
+
+// ===================================================================================================================================================
