--- a/src/css/overall/overall.scss
+++ b/src/css/overall/overall.scss
@@ -25,7 +25,7 @@ body {
   display: flex;
   flex-direction: column;
   font-family: 'Roboto400';
-  min-height: 100%;
+  min-height: 100vh;
   overflow: hidden;
 }
 
