--- a/src/css/overall/overall.scss
+++ b/src/css/overall/overall.scss
@@ -1,31 +1,41 @@
 :root {
-  --black: #000000;
-  --white: #ffffff;
-  --hover: #7B68EE;
-  --active: #4169E1;
+  // Шрифты
+  --font-main: "Inter", sans-serif; // главный шрифт на странице
+  
+  // Контейнер
+  --container-width: 1500px; // ширина контейнера
+  --container-step: 20px; // падинги по бокам на пк
+  --container-step-tablet: 15px; // падинги по бокам на планшетах
+  --container-step-mobile: 10px; // падинги по бокам на мобилках
+  --container: calc(var(--container-width) + (var(--container-step) * 2)); // сам контейнер
+
+  // Цвета
+  --background-page: #fff; // бекграунд страницы
+
+  --hover: #7B68EE; // цвет при ховере
+  --active: #4169E1; // цвет при активе
 }
 
 .container {
-  max-width: 1320px;
-  padding: 0 20px;
+  max-width: var(--container);
   margin: 0 auto;
+  padding: 0 var(--container-step);
 
   @media (max-width: 991px) {
-    padding: 0 15px;
+    padding: 0 var(--container-step-tablet);
   }
-
   @media (max-width: 600px) {
-    padding: 0 10px;
+    padding: 0 var(--container-step-mobile);
   }
 }
 
 .page {
   display: flex;
   flex-direction: column;
-  font-family: Roboto, Arial, Helvetica, sans-serif;
+  font-family: var(--font-main);
   min-height: 100vh;
   overflow: hidden;
-  background-color: transparent;
+  background-color: var(--background-page);
 }
 
 main {
