--- a/src/css/overall/fonts.scss
+++ b/src/css/overall/fonts.scss
@@ -4,89 +4,9 @@
   font-weight: 100;
   font-display: swap;
   src: local(''),
-       url("../../fonts/.woff2") format("woff2"),
-       url("../../fonts/.woff") format("woff");
+    url("../../fonts/.woff2") format("woff2")
 }
 
-@font-face {
-  font-family: '';
-  font-style: normal;
-  font-weight: 200;
-  font-display: swap;
-  src: local(''),
-       url("../../fonts/.woff2") format("woff2"),
-       url("../../fonts/.woff") format("woff");
-}
-
-@font-face {
-  font-family: '';
-  font-style: normal;
-  font-weight: 300;
-  font-display: swap;
-  src: local(''),
-       url("../../fonts/.woff2") format("woff2"),
-       url("../../fonts/.woff") format("woff");
-}
-
-@font-face {
-  font-family: '';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: local(''),
-       url("../../fonts/.woff2") format("woff2"),
-       url("../../fonts/.woff") format("woff");
-}
-
-@font-face {
-  font-family: '';
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: local(''),
-       url("../../fonts/.woff2") format("woff2"),
-       url("../../fonts/.woff") format("woff");
-}
-
-@font-face {
-  font-family: '';
-  font-style: normal;
-  font-weight: 600;
-  font-display: swap;
-  src: local(''),
-       url("../../fonts/.woff2") format("woff2"),
-       url("../../fonts/.woff") format("woff");
-}
-
-@font-face {
-  font-family: '';
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: local(''),
-       url("../../fonts/.woff2") format("woff2"),
-       url("../../fonts/.woff") format("woff");
-}
-
-@font-face {
-  font-family: '';
-  font-style: normal;
-  font-weight: 800;
-  font-display: swap;
-  src: local(''),
-       url("../../fonts/.woff2") format("woff2"),
-       url("../../fonts/.woff") format("woff");
-}
-
-@font-face {
-  font-family: '';
-  font-style: normal;
-  font-weight: 900;
-  font-display: swap;
-  src: local(''),
-       url("../../fonts/.woff2") format("woff2"),
-       url("../../fonts/.woff") format("woff");
-}
 
 /* Начертания
 
