--- a/Module gulp 2023 , includefile/src/css/overall/overall.scss
+++ b/Module gulp 2023 , includefile/src/css/overall/overall.scss
@@ -53,3 +53,15 @@ main {
   border: 0;
   clip: rect(0 0 0 0);
 }
+
+.webp {
+  & .hero {
+    background-image: url(../../img/);
+  }
+}
+
+.no-webp {
+  & .hero {
+    background-image: url(../../img/);
+  }
+}
