--- a/Module gulp 2023 , webpack/src/css/_mixin.scss
+++ b/Module gulp 2023 , webpack/src/css/_mixin.scss
@@ -12,6 +12,9 @@
 //  11) Бесконечно движущийся блок (ticker slider)
 //  12) Рейтинг на цсс
 //  13) Как сделать черно белую карту в яндекс карте
+//  14) Сделать закругление у элемента
+//  15) Если нужно крутить элемент через transform rotate
+//  16) Чтобы слайды не разъежались на всю страницу
 
 
 $maxWidth: 1920; // обязательно для адаптивного шрифта и адаптивного свойства
@@ -797,9 +800,33 @@ svg {
 // </div>
 
 // ===================================================================================================================================================
+
 // Как сделать черно белую карту в яндекс карте
 .map [class*=ground-pane] {
   -webkit-filter: grayscale(1);
   filter: grayscale(1)
 }
+
+// ===================================================================================================================================================
+
+// Сделать закругление у элемента
+div {
+  clip-path: polygon(50px 0, 156% 0, 90% 103%, 0% 100%, 0 50px);
+}
+
+// ===================================================================================================================================================
+
+//Если нужно крутить элемент через transform rotate
+div {
+  transform: rotate(90deg) translate(0%, 100%);
+  transform-origin: center right; // обращаем внимание на это свойство
+}
+
+// ===================================================================================================================================================
+
+// Чтобы слайды не разъежались на всю страницу
+.slide {
+  min-width: 0;
+}
+
 // ===================================================================================================================================================
