--- a/Module gulp 2023 , webpack/src/css/overall/fonts.scss
+++ b/Module gulp 2023 , webpack/src/css/overall/fonts.scss
@@ -1,11 +1,20 @@
+// @font-face {
+//   font-family: '';
+//   font-style: normal;
+//   font-weight: 100;
+//   font-display: swap;
+//   src: local(''),
+//     url("../../fonts/.woff2") format("woff2")
+// }
+
 @font-face {
   font-family: '';
   font-style: normal;
   font-weight: 100;
   font-display: swap;
-  src: local(''),
-    url("../../fonts/.woff2") format("woff2")
+  src: url("../../fonts/.woff2") format("woff2")
 }
+
 
 /* Начертания
 
