--- a/Module gulp 2023 , includefile/src/css/components/style.scss
+++ b/Module gulp 2023 , includefile/src/css/components/style.scss
@@ -1,4 +1,4 @@
-@mixin marginBlock {
+@mixin mb-100 {
   &:not(:last-child) {
     margin-bottom: 100px;
   }
@@ -35,6 +35,12 @@
 
     @media (max-width: 600px) {
       padding: 80px 30px 30px 30px;
+    }
+
+    &.active {
+      opacity: 1;
+      visibility: visible;
+      pointer-events: visible;
     }
   }
 
@@ -80,6 +86,54 @@
   }
 }
 
+.nav {
+
+  &__list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px 32px;
+
+    @media (max-width: 991px) {
+      flex-direction: column;
+      gap: 50px;
+    }
+
+    &_footer {
+
+      @media (max-width: 991px) {
+        flex-direction: row;
+        gap: 10px 32px;
+      }
+
+    }
+  }
+
+  &__item {}
+
+  &__link {
+    color: var(--main);
+    transition: color .3s ease-in-out;
+
+    @media (any-hover: hover) {
+      &:hover {
+        color: var(--hover);
+      }
+    }
+
+    &:focus-visible {
+      color: var(--hover);
+    }
+
+    &:active {
+      color: var(--active);
+      transition-duration: .1s;
+    }
+  }
+}
+
+
 .burger {
   display: none;
   flex-direction: column;
@@ -100,10 +154,4 @@
     background-color: #373737;
     border-radius: 8px;
   }
-}
-
-.menu-active {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: visible;
 }
