Новый плагин и приколюшки

--- a/Module gulp 2024 , includefile/src/css/overall/overall.scss
+++ b/Module gulp 2024 , includefile/src/css/overall/overall.scss
@@ -15,7 +15,7 @@
   --black: #000000;
   --white: #ffffff;
   --i: calc(1vw + 1vh);
-  
+
   --hover: #7B68EE; // цвет при ховере
   --active: #4169E1; // цвет при активе
 }
@@ -44,10 +44,18 @@
   overflow: hidden;
   color: var(--main);
   background-color: var(--background-page);
-} 
 
-main {
+  &_change {}
+}
+
+.main {
   flex: 1 1 auto;
+
+  &_no-margin {
+    &:not(:last-child) {
+      margin-bottom: 0;
+    }
+  }
 }
 
 .visually-hidden {
@@ -59,4 +67,82 @@ main {
   overflow: hidden;
   border: 0;
   clip: rect(0 0 0 0);
+}
+
+.pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3px;
+
+  & .swiper-pagination-bullet {
+    width: 4px;
+    height: 4px;
+    opacity: .3;
+    border-radius: 50%;
+    margin: 0 !important;
+    background-color: var(--white);
+  }
+
+  & .swiper-pagination-bullet-active {
+    width: 6px;
+    height: 6px;
+    opacity: 1;
+  }
+}
+
+// swiper-button-disabled
+
+// Универсальные классы
+
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.uppercase {
+  text-transform: uppercase;
+}
+
+.lowercase {
+  text-transform: lowercase;
+}
+
+.fw-100 {
+  font-weight: 100;
+}
+
+.fw-200 {
+  font-weight: 200;
+}
+
+.fw-300 {
+  font-weight: 300;
+}
+
+.fw-400 {
+  font-weight: 400;
+}
+
+.fw-500 {
+  font-weight: 500;
+}
+
+.fw-600 {
+  font-weight: 600;
+}
+
+.fw-700 {
+  font-weight: 700;
+}
+
+.fw-800 {
+  font-weight: 800;
+}
+
+.fw-900 {
+  font-weight: 900;
 }
