--- a/Module gulp 2024 , includefile/src/css/overall/normalize.scss
+++ b/Module gulp 2024 , includefile/src/css/overall/normalize.scss
@@ -60,6 +60,11 @@ input {
   border-radius: 0;
 }
 
+textarea::placeholder,
+input::placeholder {
+  color: inherit;
+}
+
 button {
   cursor: pointer;
   background-color: transparent;
@@ -72,7 +77,7 @@ button::-moz-focus-inner {
 
 a {
   display: inline-block;
-  color: inherit; 
+  color: inherit;
 }
 
 a,
@@ -89,6 +94,11 @@ ul li {
 }
 
 img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
   vertical-align: top;
 }
 
@@ -106,4 +116,14 @@ picture {
   display: block;
   width: 100%;
   height: 100%;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield;
 }
