--- a/Module gulp 2024 , includefile/src/css/main-min.scss
+++ b/Module gulp 2024 , includefile/src/css/main-min.scss
@@ -1,5 +1,6 @@
 @import url(./overall/normalize.css);
 @import url(./overall/fonts.css);
+@import url(./overall/components.css);
 @import url(./overall/overall.css);
 
-@import url(./components/style.css);
+@import url(./components/style.css); 
