--- a/Module gulp 2024 , includefile/src/css/overall/fonts.scss
+++ b/Module gulp 2024 , includefile/src/css/overall/fonts.scss
@@ -12,9 +12,8 @@
   font-style: normal;
   font-weight: 100;
   font-display: swap;
-  src: url("../../fonts/.woff2") format("woff2")
+  src: url("/fonts/.woff2") format("woff2")
 }
-
 
 /* Начертания
 
