--- a/Module gulp 2024 , includefile/src/css/components/style.scss
+++ b/Module gulp 2024 , includefile/src/css/components/style.scss
@@ -68,8 +68,8 @@
       top: 12px;
       left: 0;
       width: 100%;
-      height: 1px;
-      background-color: #FFFFFF;
+      height: 2px;
+      background-color: var(--white);
       transform: rotate(45deg);
     }
 
@@ -79,8 +79,8 @@
       top: 12px;
       right: 0;
       width: 100%;
-      height: 1px;
-      background-color: #FFFFFF;
+      height: 2px;
+      background-color: var(--white);
       transform: rotate(-45deg);
     }
   }
