--- a/Module gulp 2024 , includefile/src/css/overall/overall.scss
+++ b/Module gulp 2024 , includefile/src/css/overall/overall.scss
@@ -1,207 +1,157 @@
-:root {
-  // Шрифты
-  --font-main: "Inter", sans-serif; // главный шрифт на странице
+ .container {
+   max-width: var(--container);
+   margin: 0 auto;
+   padding: 0 var(--container-step);
 
-  // Контейнер
-  --container-width: 1500px; // ширина контейнера
-  --container-step: 20px; // падинги по бокам на пк
-  --container-step-tablet: 15px; // падинги по бокам на планшетах
-  --container-step-mobile: 10px; // падинги по бокам на мобилках
-  --container: calc(var(--container-width) + (var(--container-step) * 2)); // сам контейнер
+   @media (max-width: 991px) {
+     padding: 0 var(--container-step-tablet);
+   }
 
-  // Цвета
-  --background-page: #fff; // бекграунд страницы
-  --main: #ffffff;
-  --black: #000000;
-  --white: #ffffff;
-  --i: calc(1vw + 1vh);
+   @media (max-width: 600px) {
+     padding: 0 var(--container-step-mobile);
+   }
+ }
 
-  --hover: #7B68EE; // цвет при ховере
-  --active: #4169E1; // цвет при активе
-}
+ .rd-transfer {
+   display: inline-flex;
+   flex-wrap: wrap;
+ }
 
-// font-size: calc(var(--i) * 2); пример адаптивного шрифта
+ .page {
+   display: flex;
+   flex-direction: column;
+   font-family: var(--font-main);
+   min-height: 100vh;
+   overflow: hidden;
+   color: var(--main);
+   background-color: var(--background-page);
 
-.container {
-  max-width: var(--container);
-  margin: 0 auto;
-  padding: 0 var(--container-step);
+   &_change {}
+ }
 
-  @media (max-width: 991px) {
-    padding: 0 var(--container-step-tablet);
-  }
+ .main {
+   flex: 1 1 auto;
 
-  @media (max-width: 600px) {
-    padding: 0 var(--container-step-mobile);
-  }
-}
+   &_no-margin {
+     &:not(:last-child) {
+       margin-bottom: 0;
+     }
+   }
+ }
 
-.rd-transfer {
-  display: inline-flex;
-  flex-wrap: wrap;
-}
+ button,
+ a {
+   color: var(--main);
+ }
 
-.page {
-  display: flex;
-  flex-direction: column;
-  font-family: var(--font-main);
-  min-height: 100vh;
-  overflow: hidden;
-  color: var(--main);
-  background-color: var(--background-page);
+ // Универсальные классы
 
-  &_change {}
-}
+ .d-block {
+   display: block;
+ }
 
-.main {
-  flex: 1 1 auto;
+ .w100 {
+   min-width: 0;
+   width: 100%;
+ }
 
-  &_no-margin {
-    &:not(:last-child) {
-      margin-bottom: 0;
-    }
-  }
-}
+ .relative-z2 {
+   position: relative;
+   z-index: 2;
+ }
 
-button, a {
-  color: var(--main);
-}
+ .word-break {
+   word-break: break-all;
+ }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  border: 0;
-  clip: rect(0 0 0 0);
-}
+ .m-auto {
+   margin-left: auto;
+   margin-right: auto;
+ }
 
-.pagination {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 3px;
-  position: static;
+ .img-contain {
+   object-fit: contain;
+ }
 
-  & .swiper-pagination-bullet {
-    width: 4px;
-    height: 4px;
-    opacity: .3;
-    border-radius: 50%;
-    margin: 0 !important;
-    background-color: var(--white);
-  }
+ .img-cover {
+   object-fit: cover;
+ }
 
-  & .swiper-pagination-bullet-active {
-    width: 6px;
-    height: 6px;
-    opacity: 1;
-  }
-}
+ .underline {
+   text-decoration: underline;
+ }
 
-// swiper-button-disabled
+ .text-center {
+   text-align: center;
+ }
 
-.tx-main {
-  font-size: 10px;
-  font-weight: 400;
-  line-height: 1.2;
+ .text-right {
+   text-align: right;
+ }
 
-  @media (max-width: 991px) {
-    font-size: 10px;
-  }
+ .uppercase {
+   text-transform: uppercase;
+ }
 
-  @media (max-width: 600px) {
-    font-size: 10px;
-  }
-}
+ .lowercase {
+   text-transform: lowercase;
+ }
 
-// Универсальные классы
+ .fw-100 {
+   font-weight: 100;
+ }
 
-.img-contain {
-  object-fit: contain;
-}
+ .fw-200 {
+   font-weight: 200;
+ }
 
-.img-cover {
-  object-fit: cover;
-}
+ .fw-300 {
+   font-weight: 300;
+ }
 
-.underline {
-  text-decoration: underline;
-}
+ .fw-400 {
+   font-weight: 400;
+ }
 
-.text-center {
-  text-align: center;
-}
+ .fw-500 {
+   font-weight: 500;
+ }
 
-.text-right {
-  text-align: right;
-}
+ .fw-600 {
+   font-weight: 600;
+ }
 
-.uppercase {
-  text-transform: uppercase;
-}
+ .fw-700 {
+   font-weight: 700;
+ }
 
-.lowercase {
-  text-transform: lowercase;
-}
+ .fw-800 {
+   font-weight: 800;
+ }
 
-.fw-100 {
-  font-weight: 100;
-}
+ .fw-900 {
+   font-weight: 900;
+ }
 
-.fw-200 {
-  font-weight: 200;
-}
+ .rd-upload img {
+   opacity: 0;
+   transition: opacity .3s ease-in-out;
+ }
 
-.fw-300 {
-  font-weight: 300;
-}
+ .rd-load img {
+   opacity: 1;
+ }
 
-.fw-400 {
-  font-weight: 400;
-}
+ .scroll {
+   padding-bottom: 10px;
+   overflow: auto;
 
-.fw-500 {
-  font-weight: 500;
-}
+   &::-webkit-scrollbar {
+     height: 4px;
+     background-color: var(--white);
+   }
 
-.fw-600 {
-  font-weight: 600;
-}
-
-.fw-700 {
-  font-weight: 700;
-}
-
-.fw-800 {
-  font-weight: 800;
-}
-
-.fw-900 {
-  font-weight: 900;
-}
-
-.rd-upload img {
-  opacity: 0;
-  transition: opacity .3s ease-in-out;
-}
-
-.rd-load img {
-  opacity: 1;
-}
-
-.scroll {
-  padding-bottom: 10px;
-  overflow: auto;
-
-  &::-webkit-scrollbar {
-    height: 4px;
-    background-color: var(--white);
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: var(--brown);
-  }
-}
+   &::-webkit-scrollbar-thumb {
+     background-color: var(--brown);
+   }
+ }
